[7.x] Deprecate legacy index template API endpoints (#71843)